# BrainyCat

./: .env.example  .gitignore  .pre-commit-config.yaml  5.1f}%  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.standalone.yml  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.kiro/settings/: lsp.json
brainycat/: __init__.py  abs_compat.py  aggregator.py  async_jobs.py  atomic.py  audio_products.py  audiobook_group.py  auth.py  azw3.py  bisac.py  book_clubs.py  books.py  calibre_import.py  calibre_library_import.py  catalog_cache.py  chapter_split.py  collections.py  comicinfo.py  companion.py  concurrency.py  config.py  consistency_check.py  consumption_rules.py  content_guard.py  contribute.py  conversion.py  convert.py  cover_settings.py  covers.py  custom_columns.py  db.py  deacsm.py  dedup_engine.py  deep_enrich.py  device_import.py  duplicates.py  edition_diff.py  email_consume.py  embeddings.py  epub_check.py  (+77 more)
brainycat/experimental/: __init__.py  book_dna.py  book_nlp.py  dupe_pages.py  file_rename.py  isbntools_eval.py  kindle_epub_fix.py  lsh_dedup.py  mind_map.py  pdf_embed_annotations.py  readarr.py  reading_heatmap.py  share_cards.py  text_profile_sig.py
brainycat/importers/: calibre.py
brainycat/routes/: admin.py  ai.py  auth.py  books.py  catalog.py  enrichment.py  health.py  kobo.py  kosync.py  media.py  models.py  reader.py  social.py  wanted.py  webdav.py  ws.py
brainycat/sources/: amazon.py  authority.py  covers.py  edelweiss.py  github_books.py  google_books.py  gutendex.py  hardcover.py  isbndb.py  librivox.py  loc.py  oclc.py  open_library.py  open_library_enhanced.py  open_textbooks.py  packt.py  regional.py  wikidata.py  (+2 more)
calibre-plugin/: __init__.py  action.py  config.py
cli/: brainycat.py
docs/: RELEASE_NOTES.md  calibre-companion-path.md  features.md  honest-status.md  koreader-rfe-kosync-queue.md  launch-plan.md  positioning.md  roadmap.md  selfhosted-post.md  user-journeys.md  v2-requirements.md
ebook-convert-rs/: Cargo.toml
ebook-convert-rs/src/: lib.rs  main.rs
ebook-convert-rs/src/formats/: docx.rs  epub.rs  html.rs  mobi.rs  mod.rs  pdf.rs  svg.rs  txt.rs
ebook-convert-rs/src/pipeline/: document.rs  metadata.rs  mod.rs
ebook-convert-rs/src/transforms/: css.rs  heuristics.rs  images.rs  metadata.rs  mod.rs  structure.rs
ebook-convert-rs/tests/epub/: standard_ebooks.epub
migrations/: env.py
scripts/: fix_titles.py  init-db.sh
static/: api.js  app.html  authors.html  bilingual.html  catalog-public.html  catalog.html  efficiency.html  filename-history.html  incoming.html  index.html  intel-authors.html  intel-content-dupes.html  intel-dupes.html  intel-quality.html  intel-series.html  intelligence.html  login.html  metadata-ops.html  player.html  reader.html  recommendations.html  rules.html  series.html  setup.html  stats.html  style.css
(+62 files in other folders)
