[package]
name = "ebook-convert"
version = "0.1.0"
edition = "2024"
description = "Open-source ebook format converter inspired by Calibre's conversion pipeline"
license = "GPL-3.0"

[dependencies]
# XML/HTML parsing
roxmltree = "0.20"
quick-xml = "0.37"
markup5ever_rcdom = "0.3"
html5ever = "0.29"

# CSS
lightningcss = "1.0.0-alpha.71"

# ZIP (EPUB is a ZIP)
zip = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Image processing
image = "0.25"

# PDF
lopdf = "0.34"
printpdf = "0.8"

# SVG
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Unicode
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Regex
regex = "1"

# For WASM target
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "ebook-convert"
path = "src/main.rs"

[lib]
name = "ebook_convert"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
